5.secgrp.tf
resource "aws_security_group" "allow_all_secgrp" {
  name   = "allow_all_traffic"
  vpc_id = aws_vpc.vpc1.id

  ingress {
    description = "TLS from VPC"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.vpc1_name}-SG"
  }
}
